# schemeutils

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  libtool
include/: Makefile.am  Makefile.in  math
include/scheme/: Makefile.am  Makefile.in  color  math  trigonometry
include/scheme/pieces/: math.hh  trigonometry.hh
src/: Makefile.am  Makefile.in  math.cc
test/: Makefile.am  Makefile.in  main.cc  math_test.cc
